# cudaCode

./: .gitignore  CMakeLists.txt  README.md  a.out  main.cu  profile.ncu-rep
FP16/: fp16_v1.cu  fp16_v2.cu
Im2Col/: im2col_v1.cu
ImproveYolo/: postprocess.cu  preprocess.cu
LayerNorm/: layerNorm_v1.cu
RoPE/: rope_v1.cu
atomic/: atomicv1.cu
cooperative_group/: cooperative_groupv1.cu
cuda_graph/: cuda_graph_v1.cu
drop_out/: drop_out_v1.cu
elementwise/: vectorized_access.cu
flash_attention/: flash_attentionV1_v1.cu  flash_attentionV1_v2.cu
gemm/: gemm_v1.cu  gemm_v2.cu  gemm_v3.cu  gemm_wmma.cu
gemv/: gemv_v1.cu
merge_sort/: merge_sort_v1.cu  merge_v1.cu
paged_attention/: paged_attention_v1.cu
prefix_sum/: CMakeLists.txt
prefix_sum/include/: scan.cuh
prefix_sum/src/: main.cpp  scan.cu  utils.cpp
radix_sort/src/: demo.cu  hostVersion.cpp  main.cu  sort.cu
reduce/: reduce_v1.cu
softmax/: common.h  softmax_v1.cu  softmax_v2.cu
streams/: streams_v1.cu  streams_v2.cu
transpose/: transpose_v1.cu  transpose_v2.cu  transpose_v3.cu
zero_copy/: zero_copy.cu
